# amon-claw

./: .coverage  .gitignore  404.html  ARCHTECTURE.md  Dockerfile  README.md  compose.prod.yml  compose.yml  index.html  mkdocs.yml  pyproject.toml
.superpowers/: todo.md
.superpowers/brainstorm/: admin-flow-viz.html
adr/001-multi-tenant-architecture/: index.html
adr/002-orchestration-langgraph-pydanticai/: index.html
adr/003-infrastructure-as-code-terraform/: index.html
conductor/: infra-setup-plan.md
docs/: index.md
docs/adr/: 001-multi-tenant-architecture.md  002-orchestration-langgraph-pydanticai.md  003-infrastructure-as-code-terraform.md
docs/domain/: entities.md
docs/infra/: 001-cloud-native-setup.md  002-requirements-and-secrets.md  003-terraform-structure.md  004-persistence-guide.md
docs/logs/: 2026-04-18-project-reset-and-domain-entities.md  2026-04-19-admin-flow-implementation.md  2026-04-19-agent-orchestration-implementation.md  2026-04-19-persistence-layer-beanie.md  2026-04-19-sdr-orchestration-langgraph.md  2026-04-20-agent-tools-and-calendar.md  2026-04-20-agent-tools-integration.md  2026-04-20-chat-interface-integration.md  2026-04-20-intent-security-orchestration.md  2026-04-20-langgraph-redis-mongodb-persistence.md  2026-04-20-security-action-node-notifications.md
docs/prd/: 001-sdr-scheduling-assistant.md
docs/requirements/: functional.md  non-functional.md
docs/research/: 2026-04-19-langgraph-pydanticai-best-practices.md
docs/superpowers/plans/: 2026-04-19-admin-flow-implementation.md  2026-04-19-complete-persistence-layer.md  2026-04-19-infra-docker-terraform.md  2026-04-19-mkdocs-setup.md  2026-04-19-persistence-layer-beanie.md  2026-04-19-sdr-orchestration-langgraph-v2.md  2026-04-20-agent-tools-and-calendar.md  2026-04-20-agent-tools-integration.md  2026-04-20-base-agent-interface.md  2026-04-20-chat-interface-integration.md  2026-04-20-implement-base-sdr-graph.md  2026-04-20-intent-security-orchestration.md  2026-04-20-langgraph-redis-mongo-persistence.md  2026-04-20-sdr-langgraph-state.md  2026-04-20-sdr-orchestration-langgraph.md
docs/superpowers/specs/: 2026-04-18-persistence-layer-beanie.md  2026-04-19-admin-flow-design.md  2026-04-19-agent-orchestration-design.md  2026-04-19-infra-docker-terraform-design.md  2026-04-19-mkdocs-setup-design.md  2026-04-20-agent-tools-and-calendar-design.md  2026-04-20-agent-tools-integration-design.md  2026-04-20-base-agent-interface-design.md  2026-04-20-chat-interface-integration.md  2026-04-20-intent-security-orchestration-design.md  2026-04-20-sdr-langgraph-state.md
domain/entities/: index.html
infra/: main.tf  outputs.tf  providers.tf  variables.tf
infra/001-cloud-native-setup/: index.html
infra/002-requirements-and-secrets/: index.html
infra/003-terraform-structure/: index.html
infra/004-persistence-guide/: index.html
infra/modules/api_gateway/: main.tf  variables.tf
infra/modules/ecr/: main.tf
infra/modules/iam/: main.tf
infra/modules/lambda/: main.tf  outputs.tf  variables.tf
logs/2026-04-18-project-reset-and-domain-entities/: index.html
logs/2026-04-19-admin-flow-implementation/: index.html
logs/2026-04-19-agent-orchestration-implementation/: index.html
logs/2026-04-19-persistence-layer-beanie/: index.html
logs/2026-04-19-sdr-orchestration-langgraph/: index.html
logs/2026-04-20-agent-tools-and-calendar/: index.html
logs/2026-04-20-agent-tools-integration/: index.html
logs/2026-04-20-chat-interface-integration/: index.html
logs/2026-04-20-intent-security-orchestration/: index.html
logs/2026-04-20-langgraph-redis-mongodb-persistence/: index.html
logs/2026-04-20-security-action-node-notifications/: index.html
prd/001-sdr-scheduling-assistant/: index.html
requirements/functional/: index.html
requirements/non-functional/: index.html
research/2026-04-19-langgraph-pydanticai-best-practices/: index.html
search/: search_index.json
site/: 404.html  index.html
site/adr/001-multi-tenant-architecture/: index.html
site/adr/002-orchestration-langgraph-pydanticai/: index.html
site/adr/003-infrastructure-as-code-terraform/: index.html
site/domain/entities/: index.html
site/infra/001-cloud-native-setup/: index.html
site/requirements/functional/: index.html
site/search/: search_index.json
src/amon_claw/: main.py  nodes.py  state.py
superpowers/skills/: docs-sync.skill
tests/: conftest.py
(+135 files in other folders)
